--- a/libApp/libApp/client/main.html
+++ b/libApp/libApp/client/main.html
@@ -9,81 +9,36 @@
 
 <!--TEMPLATES-->
 
-<template name="ApplicationLayout">
+<!-- <template name="ApplicationLayout">
   {{> yield "navbar"}}
   {{> yield "mainContainer"}}
-  {{> yield "footer"}}
+</template> -->
+
+<template name="welcome">
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Welcome to the Library!</h1>
+      <a href="/images" class="btn btn-info">libApp Meteor</a>
+    </div>
+  </div>
 </template>
 
 <template name="navbar">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <h1>UNIBZ Library System!</h1>
-        {{> loginButtons}}
-        <button id="goFilter" class="btn btn-default" type="button">Filter</button>
+       {{> loginButtons}}
     </div>
   </nav>
 </template>
 
-<template name="noAccess">
-  <form class="form">
-          <div class="col-xs-8 col-md-10">
-            <input id="not-allowed" type="text" placeholder="Sign up / sign in to share your thoughts" disabled>
-          </div>
-          <div class="col-xs-4 col-md-2">
-            <button class="btn btn-warning" id="btnnotloggedin" data-dismiss="modal" disabled>login first</button>
-          </div>     
-        </form>
-</template>
-
 <template name="books">
-  <ul class="comments" id="comments">
-    <!-- for each element of the "Collection.find()" object -->
-    {{#each books}}  
-    <span class="badge"> {{author}} - {{time}} </span><!-- PLEASE SEPARTE in 2 independent parts-->
-    <span class="label label-primary">TAGS: {{tags}}</span>
-    <li id="book-text"> {{text}} </li>
-    {{/each}}
-  </ul>
-  <nav>
-    <ul class="pager">
-      <li class="{{prevPageClass}}">
-        <a id="prevPage" href="{{prevPage}}">
-          <span aria-hidden="true">&larr;</span> Previous
-        </a>
-      </li>
-      <li class="{{nextPageClass}}">
-        <a id="nextPage" href="{{nextPage}}">
-          Next <span aria-hidden="true">&rarr;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-</template>
-
-<template name="libResourcesNav">
-  <nav>
-    <ul class="pager">
-      <li class="{{prevPageClass}}">
-        <a id="prevPage" href="{{prevPage}}">
-          <span aria-hidden="true">&larr;</span> Previous
-        </a>
-      </li>
-      <li class="{{nextPageClass}}">
-        <a id="nextPage" href="{{nextPage}}">
-          Next <span aria-hidden="true">&rarr;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+  <div class="container">
+    <h2>{{book_alt}}</h2>
+    <a href="/books"><img class="single-book" src="/{{book_img}}"/></a>
+  </div>
 </template>
 
 <template name="footer">
   <h2>Contact Details</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
 </template>
