contact details and opening hours
Hard coded

--- a/libApp/libApp/client/main.html
+++ b/libApp/libApp/client/main.html
@@ -46,14 +46,6 @@
 
   <hr/>
  <div class="container">
-<!--   <h2>Book Search Results</h2>
-  {{#each books }}
-  <ul>
-    <li>{{title}}</li>
-    <li>{{author}}</li>
-  </ul>
-  {{/each}}
-  </div> -->
 
   <h2>Books</h2>
   <table border="1" id="myTable" class="tablesorter">
@@ -164,5 +156,39 @@
 </template>
 
 <template name="footer">
-  <h2>Contact Details</h2>
+
+  <h2>CONTACT DETAILS</h2>
+  <p>Universitätsplatz 1 - piazza Università, 1</p>
+  <p>I - 39100 Bozen-Bolzano</p>
+  <p>T: +39 0471 012300</p>
+  <p>F: +39 0471 012309</p>
+  <p>library@unibz.it</p>
+  
+  <hr>
+  <h1>OPENING HOURS</h1>
+  <h3>BOZEN-BOLZANO</h3>
+  <p>Monday–Friday  8:00–24:00*</p>
+  <p>Saturday  9:00–20:00**</p>
+  <p>*19:00–24:00 Self Service</p>
+  <p>**17:00–20:00 Self Service</p>
+
+  <p>Please note: for different opening hours during the summer and Holidays check our Calendar Bozen-Bolzano. </p>
+
+  <hr>
+  <h3>BRIXEN-BRESSANONE</h3>
+  <p>Monday - Friday  8:00-18:00</p>
+  <p>Saturday  8:30-13:00</p>
+
+  <p>Please note: for different opening hours during the summer and Holidays check our Calendar Bozen-Bolzano. </p>
+
+  <hr>
+  <h3>BRUNECK-BRUNICO</h3>
+  <p>Monday - Friday  10:00-19:00</p>
+  <p>Saturday  10:00-12:00*</p>
+  <p>*Self Service</p>
+
+  <p>Please note: for different opening hours during the summer and Holidays check our Calendar Bozen-Bolzano. </p>
+
+  <p>Additional opening hours for Unibz Students</p>
+
 </template>
